--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -95,27 +95,33 @@
     max-width: 60rem;
     margin   : 0 auto;
     clear    : both;
-    overflow : hidden;
+    overflow : auto;
     padding  : .8rem 0;
+    position : relative;
 }
 
-.movie__text {}
-
 .movie__title {
-    padding: 0 0 .8rem .8rem;
+    padding    : 0 0 .8rem .8rem;
+    line-height: 1.5rem;
 }
 
 .movie__subtitle {
-    padding: 0 0 .8rem .8rem;
+    max-width         : 47rem;
+    overflow          : hidden;
+    display           : -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 13;
 }
 
 .movie-image {
     height      : 20rem;
+    max-width   : 13rem;
     float       : left;
-    display     : inline;
+    display     : block;
     min-width   : none;
     resize      : both;
     margin-right: .8rem;
+    object-fit  : contain;
 }
 
 .movie-button {
@@ -126,16 +132,19 @@
     color              : #FFFFFF;
     cursor             : pointer;
     font-family        : Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji", NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", sans-serif;
-    font-size          : 16px;
+    font-size          : 1rem;
     font-weight        : 700;
-    line-height        : 24px;
+    line-height        : 1.5rem;
     opacity            : 1;
     outline            : 0 solid transparent;
-    padding            : 8px 18px;
+    padding            : .5rem 1.125rem;
     user-select        : none;
     -webkit-user-select: none;
     touch-action       : manipulation;
     width              : fit-content;
     word-break         : break-word;
     border             : 0;
+    bottom             : .8rem;
+    right              : 0%;
+    position           : absolute;
 }
