--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,6 +4,14 @@
     padding   : 0;
 }
 
+body {
+    background: #353239;
+}
+
+.body {
+    color: white;
+}
+
 /* Containers */
 
 .container {
@@ -15,9 +23,10 @@
 /* Header */
 
 .header {
-    background: #6F439C;
+    background: #5E5DF0;
     color     : white;
     padding   : 1.6rem 0;
+    text-align: center;
 }
 
 .header__title {
@@ -34,7 +43,7 @@
 /* Actions Bar */
 
 .actions {
-    background-color: #353239;
+    background-color: black;
     padding         : .8rem;
 }
 
@@ -53,32 +62,29 @@
     width       : 20rem;
     margin-right: auto;
     padding     : .4rem .8rem;
-    resize      : both;
     min-width   : 1rem;
 }
 
 .main-button {
-    border                   : 0 solid #e2e8f0;
-    border-radius            : 1.5rem;
-    color                    : #0d172a;
-    cursor                   : pointer;
-    min-width                : none;
-    margin                   : 0 1rem;
-    font-size                : 1.4rem;
-    font-weight              : 300;
-    line-height              : 1;
-    text-align               : center;
-    text-decoration          : none #0d172a solid;
-    text-decoration-thickness: auto;
-    transition               : all .1s cubic-bezier(.4, 0, .2, 1);
-    box-shadow               : 0px 1px 2px rgba(166, 175, 195, 0.25);
-    user-select              : none;
-    -webkit-user-select      : none;
-    touch-action             : manipulation;
+    border             : 0 solid #e2e8f0;
+    border-radius      : 1.5rem;
+    color              : #5E5DF0;
+    cursor             : pointer;
+    min-width          : none;
+    margin             : 0 1rem;
+    font-size          : 1.4rem;
+    font-weight        : 300;
+    line-height        : 1;
+    text-align         : center;
+    text-decoration    : none #5E5DF0 solid;
+    transition         : all .1s cubic-bezier(.4, 0, .2, 1);
+    user-select        : none;
+    -webkit-user-select: none;
+    touch-action       : manipulation;
 }
 
 .main-button:hover {
-    background-color: #1e293b;
+    background-color: #5E5DF0;
     color           : #fff;
 }
 
@@ -119,21 +125,18 @@
     float       : left;
     display     : block;
     min-width   : none;
-    resize      : both;
     margin-right: .8rem;
     object-fit  : contain;
 }
 
 .movie-button {
-    background         : #5E5DF0;
-    border-radius      : 999px;
-    box-shadow         : #5E5DF0 0 10px 20px -10px;
+    background         : #FFFFFF;
+    border-radius      : 1.5rem;
     box-sizing         : border-box;
-    color              : #FFFFFF;
+    color              : #5E5DF0;
     cursor             : pointer;
-    font-family        : Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji", NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", sans-serif;
     font-size          : 1rem;
-    font-weight        : 700;
+    font-weight        : 300;
     line-height        : 1.5rem;
     opacity            : 1;
     outline            : 0 solid transparent;
@@ -145,6 +148,72 @@
     word-break         : break-word;
     border             : 0;
     bottom             : .8rem;
-    right              : 0%;
+    right              : .8rem;
     position           : absolute;
+}
+
+.movie-button:hover {
+    background-color: #5E5DF0;
+    color           : #FFFFFF;
+}
+
+
+/* Movie page */
+
+.movie-page {
+    display         : flex;
+    background-color: #5E5DF0;
+}
+
+.movie-column {
+    height    : auto;
+    margin    : .4rem;
+    text-align: left;
+    overflow  : auto;
+}
+
+.movie-column__left {
+    flex           : 25%;
+    align-content  : center;
+    text-align     : center;
+    justify-content: center;
+}
+
+.movie-column__center {
+    flex: 50%;
+}
+
+.movie-column__right {
+    flex    : 25%;
+    position: relative;
+}
+
+#movie-img {
+    max-width : 100%;
+    min-width : none;
+    object-fit: contain;
+}
+
+.star-rating {
+    display        : flex;
+    flex-direction : row-reverse;
+    font-size      : 1.5rem;
+    justify-content: space-around;
+    padding        : 0 .2rem;
+    text-align     : center;
+    max-width      : 100%;
+    width          : fit-content;
+    min-width      : none;
+}
+
+.star-rating input {
+    display: none;
+}
+
+.star-rating label {
+    color: #ccc;
+}
+
+.star-rating :checked~label {
+    color: #f90;
 }
