--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,12 +30,11 @@ body {
 }
 
 .header__title {
-    font-size    : 3.2rem;
+    font-size    : 2.7rem;
     margin-bottom: .4rem;
 }
 
 .header__subtitle {
-    /* color: #777; */
     font-size  : 1.6rem;
     font-weight: 300;
 }
@@ -50,8 +49,9 @@ body {
 .actions__container {
     align-items: center;
     display    : flex;
-    max-width  : 60rem;
     margin     : 0 auto;
+    max-width  : 60rem;
+    min-width  : none;
 }
 
 .input {
@@ -59,10 +59,9 @@ body {
     font-size   : 1.1rem;
     font-weight : 300;
     height      : 3rem;
-    width       : 20rem;
     margin-right: auto;
     padding     : .4rem .8rem;
-    min-width   : 1rem;
+    min-width   : 7.5rem;
 }
 
 .main-button {
@@ -71,10 +70,11 @@ body {
     color              : #5E5DF0;
     cursor             : pointer;
     min-width          : none;
+    width              : fit-content;
     margin             : 0 1rem;
     font-size          : 1.4rem;
     font-weight        : 300;
-    line-height        : 1;
+    line-height        : 1rem;
     text-align         : center;
     text-decoration    : none #5E5DF0 solid;
     transition         : all .1s cubic-bezier(.4, 0, .2, 1);
@@ -88,9 +88,9 @@ body {
     color           : #fff;
 }
 
-@media (min-width: 1px) {
+@media (min-width: .06rem) {
     .main-button {
-        font-size: 1.125rem;
+        font-size: 1rem;
         padding  : 1rem 2rem;
     }
 }
@@ -107,8 +107,11 @@ body {
 }
 
 .movie__title {
-    padding    : 0 0 .8rem .8rem;
-    line-height: 1.5rem;
+    margin            : 0 0 .8rem .8rem;
+    overflow          : hidden;
+    display           : -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
 
 .movie__subtitle {
@@ -157,6 +160,34 @@ body {
     color           : #FFFFFF;
 }
 
+#error-div {
+    color      : #D8000C;
+    font-size  : 1.6rem;
+    font-weight: 300;
+}
+
+
+.toTop {
+    display         : none;
+    position        : fixed;
+    bottom          : .8rem;
+    right           : .8rem;
+    z-index         : 99;
+    font-size       : 1rem;
+    border          : none;
+    outline         : none;
+    background-color: #FFFFFF;
+    color           : #5E5DF0;
+    cursor          : pointer;
+    padding         : 15px;
+    border-radius   : 4px;
+}
+
+.toTop:hover {
+    background-color: #5E5DF0;
+    color           : #FFFFFF;
+}
+
 
 /* Movie page */
 
@@ -197,13 +228,13 @@ body {
 .star-rating {
     display        : flex;
     flex-direction : row-reverse;
-    font-size      : 1.5rem;
+    font-size      : 1.4rem;
     justify-content: space-around;
-    padding        : 0 .2rem;
     text-align     : center;
     max-width      : 100%;
-    width          : fit-content;
     min-width      : none;
+    width          : fit-content;
+    padding        : .2rem;
 }
 
 .star-rating input {
@@ -216,4 +247,43 @@ body {
 
 .star-rating :checked~label {
     color: #f90;
+}
+
+
+.movie-button-2 {
+    background         : #FFFFFF;
+    border-radius      : 1.5rem;
+    box-sizing         : border-box;
+    color              : #5E5DF0;
+    cursor             : pointer;
+    font-size          : 1rem;
+    font-weight        : 300;
+    line-height        : 1.5rem;
+    opacity            : 1;
+    outline            : 0 solid transparent;
+    padding            : .5rem 1.125rem;
+    user-select        : none;
+    -webkit-user-select: none;
+    touch-action       : manipulation;
+    max-width          : 98%;
+    word-break         : keep-all;
+    border             : 0;
+    position           : absolute;
+    bottom             : 0%;
+    right              : 0%;
+}
+
+.movie-description {
+    overflow          : hidden;
+    display           : -webkit-box;
+    -webkit-line-clamp: 6;
+    line-clamp        : 6;
+    -webkit-box-orient: vertical;
+}
+
+.movie-title {
+    overflow          : hidden;
+    display           : -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
